--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -3,7 +3,7 @@
 <% @adventures.in_groups_of(3) do |group| %>
   <div class="row">
     <% group.compact.each do |adventure| %>
-      <div class="col-md-4">
+      <div class="col-md-4 adventure-group">
         <%= image_tag adventure.picture_url, width: '100%' if adventure.picture.present?%>
         <h4><%= link_to adventure.name, adventure %></h4>
         <%= adventure.description %>
