Skip rspec test section

--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="row">
+<div class="row adventure-group single">
   <div class="col-md-9">
     <%= image_tag(@adventure.picture_url, width: '100%') if @adventure.picture.present? %>
   </div>
